<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealOrder"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/meal_image_hint"
            android:id="@+id/meal_img"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/meal_name"
            android:padding="16dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/meal_desc"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/basic"
            android:id="@+id/meal_price"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="#6A000000"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:text="@string/please_choose"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:text="@string/choose_1"
            android:textSize="18sp"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/small"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic"
                        android:paddingTop="8dp"
                        android:id="@+id/small_meal_price"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic"
                        android:paddingTop="8dp"
                        android:id="@+id/medium_meal_price"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"

                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/large"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic"
                        android:paddingTop="8dp"
                        android:id="@+id/large_meal_price"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                </LinearLayout>



            </LinearLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radio_group"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:id="@+id/small_check"
                    android:checked="true"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:id="@+id/medium_check"


                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:id="@+id/large_check"


                    />



            </RadioGroup>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="#6A000000"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="40sp"
                android:textColor="#DF402A"
                android:paddingRight="40dp"
                android:paddingEnd="40dp"
                tools:ignore="RtlSymmetry"
                android:id="@+id/decrease"
                />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:paddingLeft="16dp"
                android:fontFamily="@font/landasans_medium"
                android:paddingStart="16dp"
                android:textStyle="bold"
                android:text="@string/quantity"
                android:id="@+id/quantity"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/increase"
                android:textSize="40sp"
                android:textColor="#DF402A"
                android:paddingLeft="26dp"
                android:paddingStart="26dp"
                tools:ignore="RtlSymmetry"
                android:id="@+id/increase"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/staple_view"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:id="@+id/add_to_card"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:id="@+id/total"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_to_basket"
                android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>
